# rift-cli

./: .gitignore  pyproject.toml
src/rift_cli/: __init__.py  main.py
src/rift_cli/commands/buildings/: build.py  building.py  destroy.py  list.py  status.py
src/rift_cli/commands/generic/: init.py  resources.py  status.py  test.py
src/rift_cli/commands/planets/: list.py  planets.py  tree.py
src/rift_cli/data/: planetdata.py  resources.py
src/rift_cli/data/buildings/: building.py  building_registry.py  building_union.py
src/rift_cli/data/buildings/resources/: metal_mine.py  mine.py
src/rift_cli/data/buildings/resources/crystal/: crystal_mine.py
src/rift_cli/data/buildings/resources/metal/: metal_mine.py
src/rift_cli/data/cost/: cost.py
src/rift_cli/data/game/: gamedata.py  optiondata.py
src/rift_cli/data/reserach/: research.py
src/rift_cli/data/technology/: technology.py  technology_registry.py
src/rift_cli/display/: formatter.py
src/rift_cli/functions/generic/: game.py  generators.py  resource_utils.py
src/rift_cli/functions/planets/: planet.py
src/rift_cli/state/: option_state.py  state.py
src/rift_cli/utils/: colors.py  vars.py
