[project]
name = "rift-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexandra Thubeauville", email = "alexandra.thubeauville@digits.schwarz" }
]
requires-python = ">=3.12"
dependencies = [
    "cattrs>=26.1.0",
    "click>=8.3.2",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
]

[project.scripts]
rift-cli = "rift_cli.main:cli"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
